fixed layout bug in mouse pointer page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -528,7 +528,9 @@ span {
     width:330px;
     height:120px;
     background-color: #161514; 
-    line-height: 120px;
+    padding-top: 20px;
+    line-height: 40px; 
+    margin: 10px;
 }
 .custom-cursor h3{
     color: $background-color;
@@ -544,10 +546,12 @@ span {
 
 .custom-drag-cursor{
     text-align: center;
-    width:200px;
-    height:120px;
+    width:160px;
+    height:100px;
     background-color: #161514; 
-    line-height: 120px;
+    padding-top: 10px;
+    line-height: 30px; 
+    margin: 2px;
 }
 
 .custom-drag-cursor h3{
